--- a/src/Presentation/WebApp/Views/User/Index.cshtml
+++ b/src/Presentation/WebApp/Views/User/Index.cshtml
@@ -58,57 +58,60 @@
                 </tr>
             </thead>
             <tbody class="text-gray-600 fw-semibold" id="user_table_body">
-                @foreach (var user in Model)
+                 @if (Model != null && Model.Count > 0)
                 {
-                    <tr id="tr_@user.Id" data-user-id="@user.Id">
+                    @foreach (var user in Model)
+                    {
+                        <tr id="tr_@user.Id" data-user-id="@user.Id">
 
-                        <td class="d-flex align-items-center">
+                            <td class="d-flex align-items-center">
 
-                            <!--begin::User details-->
-                            <div class="d-flex flex-column">
-                                <span class="text-gray-800 text-hover-primary mb-1">@user.FirstName @user.LastName</span>
-                                <span>@user.Email</span>
-                            </div>
-                            <!--begin::User details-->
-                        </td>
-                        <td>@user.PhoneNumber</td>
-                        <td>@user.Type</td>
-                        <td>
-                            @if (user.IsActive)
-                            {
-                                <div class="badge badge-light-success fw-bold">Enabled</div>
-                            }
-                            else
-                            {
-                                <div class="badge badge-light-danger fw-bold">Disable</div>
-
-                            }
-                        </td>
-                        <td>@user.Gender</td>
-                        <td class="text-end">
-                            <a href="#" class="btn btn-light btn-active-light-primary btn-flex btn-center btn-sm" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
-                                Actions
-                                <i class="ki-outline ki-down fs-5 ms-1"></i>
-                            </a>
-                            <!--begin::Menu-->
-                            <div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-semibold fs-7 w-125px py-4" data-kt-menu="true">
-                                <!--begin::Menu item-->
-                                <div class="menu-item px-3">
-                                    <a href="#" class="menu-link px-3 editBtn">Edit</a>
+                                <!--begin::User details-->
+                                <div class="d-flex flex-column">
+                                    <span class="text-gray-800 text-hover-primary mb-1">@user.FirstName @user.LastName</span>
+                                    <span>@user.Email</span>
                                 </div>
-                                <!--end::Menu item-->
-                                <!--begin::Menu item-->
-                                <div class="menu-item px-3">
-                                    <a href="#" class="menu-link px-3 deleteBtn" data-kt-users-table-filter="delete_row" data-id="@user.Id">Delete</a>
+                                <!--begin::User details-->
+                            </td>
+                            <td>@user.PhoneNumber</td>
+                            <td>@user.Type</td>
+                            <td>
+                                @if (user.IsActive)
+                                {
+                                    <div class="badge badge-light-success fw-bold">Enabled</div>
+                                }
+                                else
+                                {
+                                    <div class="badge badge-light-danger fw-bold">Disable</div>
 
+                                }
+                            </td>
+                            <td>@user.Gender</td>
+                            <td class="text-end">
+                                <a href="#" class="btn btn-light btn-active-light-primary btn-flex btn-center btn-sm" data-kt-menu-trigger="click" data-kt-menu-placement="bottom-end">
+                                    Actions
+                                    <i class="ki-outline ki-down fs-5 ms-1"></i>
+                                </a>
+                                <!--begin::Menu-->
+                                <div class="menu menu-sub menu-sub-dropdown menu-column menu-rounded menu-gray-600 menu-state-bg-light-primary fw-semibold fs-7 w-125px py-4" data-kt-menu="true">
+                                    <!--begin::Menu item-->
+                                    <div class="menu-item px-3">
+                                        <a href="#" class="menu-link px-3 editBtn">Edit</a>
+                                    </div>
+                                    <!--end::Menu item-->
+                                    <!--begin::Menu item-->
+                                    <div class="menu-item px-3">
+                                        <a href="#" class="menu-link px-3 deleteBtn" data-kt-users-table-filter="delete_row" data-id="@user.Id">Delete</a>
+
+                                    </div>
+                                    <!--end::Menu item-->
                                 </div>
-                                <!--end::Menu item-->
-                            </div>
-                            <!--end::Menu-->
-                        </td>
-                    </tr>
+                                <!--end::Menu-->
+                            </td>
+                        </tr>
 
 
+                    }
                 }
 
             </tbody>
@@ -451,31 +454,24 @@
             datatable = $(table).DataTable({
                 "info": false,
                 "paging": true,
-               
 
             });
 
 
-            // Form submit olayını yakala
             $("#kt_modal_add_user_form").on("submit", function (e) {
-                e.preventDefault(); // Sayfanın yenilenmesini engeller
+                e.preventDefault(); 
 
-                // Form verilerini al
                 var formData = $(this).serialize();
 
-                // AJAX isteği gönder
                 $.ajax({
                     url: "/User/AddUser",
                     type: 'POST',
                     data: formData,
                     success: function (response) {
                         console.log(response)
-                        // Eğer kullanıcı başarıyla eklenmişse
                         if (response.success) {
-                            // Yeni kullanıcıyı tabloya ekle
-                            var newUser = response.data; // Backend'den gelen yeni kullanıcı bilgisi
+                            var newUser = response.data; 
 
-                            // Kullanıcıyı tabloya ekle
                             var userRow = `<tr id="tr_${newUser.id}">
 
                                                         <td class="d-flex align-items-center">
@@ -513,75 +509,28 @@
                                                     `;
 
 
-                            // Tabloya yeni satırı ekle
                             $("#user_table_body").append(userRow);
 
-                            // Modal kapanmadan önce işlemi sonlandırma
-                            // Modal'ı kapat
+                           
                             $('#kt_modal_add_user').modal('hide');
 
-
-                            // Başarı mesajı
                             toastr["success"]("User added successfully!");
 
-                            // Formu temizle
                             $("#kt_modal_add_user_form")[0].reset();
 
                         } else {
-                            // Hata mesajı
                             toastr["error"]("Error adding user: " + response.message);
                         }
                     },
                     error: function (xhr, status, error) {
-                        // AJAX hatası
                         toastr["error"]("An error occurred: " + error);
                     }
                 });
             });
 
-            //$(".deleteBtn").click(function () {
-            //    var userID = $(this).data('id'); // Get user ID
-
-
-
-            //    Swal.fire({
-            //        text: "Are you sure you want to delete?",
-            //        icon: "warning",
-            //        showCancelButton: true,
-            //        buttonsStyling: false,
-            //        confirmButtonText: "Yes, delete!",
-            //        cancelButtonText: "No, cancel",
-            //        customClass: {
-            //            confirmButton: "btn fw-bold btn-danger",
-            //            cancelButton: "btn fw-bold btn-active-light-primary"
-            //        }
-            //    }).then(function (result) {
-            //        if (result.isConfirmed) { // Check if the user clicked 'Yes'
-            //            $.ajax({
-            //                type: 'POST',
-            //                url: '/User/DeleteUser?id=' + userID, // Ensure this URL is correct
-            //                success: function (data) {
-            //                    if (data.success) { // Check if deletion is successful
-            //                        toastr["success"]("Kullanıcı başarıyla silindi");
-            //                        // Remove the user row from the table
-            //                        $("#tr_" + userID).fadeOut(400, function () { $(this).remove(); });
-            //                    } else {
-            //                        toastr["error"]('Hata Oluştu! İşlem sırasında hata oluştu.');
-            //                    }
-            //                },
-            //                error: function () {
-            //                    toastr["error"]("'Hata! Sunucuyla iletişimde hata oluştu. ");
-
-            //                }
-            //            });
-            //        }
-            //    });
-            //});
-
+            
             $(document).on('click', '.deleteBtn', function () {
-                var userID = $(this).data('id'); // Get user ID
-
-
+                var userID = $(this).data('id'); 
 
                 Swal.fire({
                     text: "Are you sure you want to delete?",
@@ -595,14 +544,13 @@
                         cancelButton: "btn fw-bold btn-active-light-primary"
                     }
                 }).then(function (result) {
-                    if (result.isConfirmed) { // Check if the user clicked 'Yes'
+                    if (result.isConfirmed) { 
                         $.ajax({
                             type: 'POST',
-                            url: '/User/DeleteUser?id=' + userID, // Ensure this URL is correct
+                            url: '/User/DeleteUser?id=' + userID, 
                             success: function (data) {
-                                if (data.success) { // Check if deletion is successful
+                                if (data.success) { 
                                     toastr["success"]("Kullanıcı başarıyla silindi");
-                                    // Remove the user row from the table
                                     $("#tr_" + userID).fadeOut(400, function () { $(this).remove(); });
                                 } else {
                                     toastr["error"]('Hata Oluştu! İşlem sırasında hata oluştu.');
@@ -618,7 +566,6 @@
             });
 
 
-            // Attach click event to the Edit button to load user data into the modal
             $(document).on('click', '.editBtn', function () {
                 var row = $(this).closest('tr');
                 var userId = row.data('user-id');
@@ -628,17 +575,17 @@
                     type: 'POST',
                     url: '/User/GetUser?id=' + userId, 
                     success: function (response) {
-                        if (response.success) { // Check if deletion is successful
+                        if (response.success) { 
 
-                            $('#editUserForm input[name="id"]').val(response.data.id);  // id
-                            $('#editUserForm input[name="firstName"]').val(response.data.firstName);  // First Name
-                            $('#editUserForm input[name="lastName"]').val(response.data.lastName);  // Last Name
-                            $('#editUserForm input[name="email"]').val(response.data.email);  // Email
-                            $('#editUserForm input[name="phoneNumber"]').val(response.data.phoneNumber);  // Phone Number
-                            $('#editUserForm select[name="gender"]').val(response.data.gender).trigger('change');  // Gender
+                            $('#editUserForm input[name="id"]').val(response.data.id);  
+                            $('#editUserForm input[name="firstName"]').val(response.data.firstName); 
+                            $('#editUserForm input[name="lastName"]').val(response.data.lastName);  
+                            $('#editUserForm input[name="email"]').val(response.data.email);  
+                            $('#editUserForm input[name="phoneNumber"]').val(response.data.phoneNumber); 
+                            $('#editUserForm select[name="gender"]').val(response.data.gender).trigger('change');  
 
 
-                            $('input[name="type"][value="' + response.data.type + '"]').prop('checked', true);  // Role (Admin/User)
+                            $('input[name="type"][value="' + response.data.type + '"]').prop('checked', true);  
 
                             $('#kt_modal_update_user').modal('show');
 
@@ -656,30 +603,28 @@
 
             });
 
-            // Handle form submission
-            // Form submit olayını yakala
-            $("#editUserForm").on("submit", function (e) {
-                e.preventDefault(); // Sayfanın yenilenmesini engeller
+           
 
-                 // Form verilerini al
+
+            $("#editUserForm").on("submit", function (e) {
+                e.preventDefault(); 
+
                 var formData = $(this).serialize();
 
-                // Perform AJAX request to save the data
                 $.ajax({
                     url: "/User/UpdateUser",
                     type: 'POST',
                     data: formData,
                     success: function (response) {
                         if (response.success) {
-                            // Update the table with new user data
+
                             var row = $('#kt_table_users').find('tr[data-user-id="' + formData.userId + '"]');
                             row.find('.firstName').text(formData.firstName);
                             row.find('.lastName').text(formData.lastName);
 
-                            // Hide the modal
                             $('#kt_modal_update_user').modal('hide');
 
-                            // Show success message
+                          
                             Swal.fire({
                                 text: 'User updated successfully!',
                                 icon: 'success',
@@ -689,7 +634,7 @@
                                 }
                             });
                         } else {
-                            // Show error message
+                            
                             Swal.fire({
                                 text: response.message || 'There was an error updating the user.',
                                 icon: 'error',
@@ -701,7 +646,6 @@
                         }
                     },
                     error: function (xhr, status, error) {
-                        // Show error message in case of failure
                         Swal.fire({
                             text: 'An unexpected error occurred.',
                             icon: 'error',
@@ -717,7 +661,6 @@
 
 
 
-            // Cancel button handler
             const cancelButton = element.querySelector('[data-kt-users-modal-action="cancel"]');
             cancelButton.addEventListener('click', e => {
                 e.preventDefault();
@@ -735,7 +678,7 @@
                     }
                 }).then(function (result) {
                     if (result.value) {
-                        form.reset(); // Reset form
+                        form.reset(); 
                         modal.hide();
                     } else if (result.dismiss === 'cancel') {
                         Swal.fire({
