--- a/src/Presentation/WebApp/Views/Auth/SignIn.cshtml
+++ b/src/Presentation/WebApp/Views/Auth/SignIn.cshtml
@@ -4,7 +4,7 @@
 }
 
 <!--begin::Form-->
-<form class="form w-100" novalidate="novalidate" id="kt_sign_in_form" asp-controller="Auth"  asp-action="Login">
+<form class="form w-100" id="kt_sign_in_form" asp-controller="Auth"  asp-action="Login">
     <!--begin::Heading-->
     <div class="text-center mb-11">
         <!--begin::Title-->
@@ -23,14 +23,14 @@
     <!--begin::Input group--->
     <div class="fv-row mb-8">
         <!--begin::Email-->
-        <input type="text" placeholder="Email" name="email" autocomplete="off" class="form-control bg-transparent" />
+        <input type="email" placeholder="Email" name="email" autocomplete="off" class="form-control bg-transparent" required />
         <!--end::Email-->
     </div>
 
     <!--end::Input group--->
     <div class="fv-row mb-3">
         <!--begin::Password-->
-        <input type="password" placeholder="Password" name="password" autocomplete="off" class="form-control bg-transparent" />
+        <input type="password" placeholder="Password" name="password" autocomplete="off" class="form-control bg-transparent" required />
         <!--end::Password-->
     </div>
     <!--end::Input group--->
